updated at: 2022-08-22 21:55, 【祝☆育英優勝】【VRアバター向け】ミーシャ【FBX】 - 藻類観察会 - BOOTH

--- a/VRChat/31/1069331.html
+++ b/VRChat/31/1069331.html
@@ -4,26 +4,26 @@
     <link href="/manifest.json" rel="manifest">
     <meta charset="utf-8">
     <title>
-      【VRアバター向け】ミーシャ【FBX】 - 藻類観察会 - BOOTH
+      【祝☆育英優勝】【VRアバター向け】ミーシャ【FBX】 - 藻類観察会 - BOOTH
     </title>
     <meta name="description" content=
-    "Humanoid対応のオリジナルモデル「ミーシャ」です。 主にVRChatでの使用を想定しています。 揺れ物用のボーン（髪・スカート・リボン）も入っておりますので、Unityの有償アセット（Dynamic Bone）を利用して揺らすことができます。 この商品は Unity 2019.4.31f1 で動作確認しております。">
+    "☆☆☆☆甲子園優勝記念☆☆☆☆ 8/23まで\500引 ☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆ Humanoid対応のオリジナルモデル「ミーシャ」です。 主にVRChatでの使用を想定しています。 揺れ物用のボーン（髪・スカート・リボン）も入っておりますので、Unityの有償アセット（Dynamic Bone）を利用して揺らすことができます。 この商品は Unity 2019.4.31f1 で動作確認しております。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1069331">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "【VRアバター向け】ミーシャ【FBX】 - 藻類観察会 - BOOTH">
+    "【祝☆育英優勝】【VRアバター向け】ミーシャ【FBX】 - 藻類観察会 - BOOTH">
     <meta name="twitter:description" content=
-    "Humanoid対応のオリジナルモデル「ミーシャ」です。 主にVRChatでの使用を想定しています。 揺れ物用のボーン（髪・スカート・リボン）も入っておりますので、Unityの有償アセット（Dynamic Bone）を利用して揺らすことができます。 この商品は Unity 2019.4.31f1 で動作確認しております。">
+    "☆☆☆☆甲子園優勝記念☆☆☆☆ 8/23まで\500引 ☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆ Humanoid対応のオリジナルモデル「ミーシャ」です。 主にVRChatでの使用を想定しています。 揺れ物用のボーン（髪・スカート・リボン）も入っておりますので、Unityの有償アセット（Dynamic Bone）を利用して揺らすことができます。 この商品は Unity 2019.4.31f1 で動作確認しております。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/674fc427-6fbb-4335-8520-23bc1069d4f5/i/1069331/dd79cc1e-3556-435d-a17d-7b437ea1b30b_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "【VRアバター向け】ミーシャ【FBX】 - 藻類観察会 - BOOTH">
+    "【祝☆育英優勝】【VRアバター向け】ミーシャ【FBX】 - 藻類観察会 - BOOTH">
     <meta property="og:description" content=
-    "Humanoid対応のオリジナルモデル「ミーシャ」です。 主にVRChatでの使用を想定しています。 揺れ物用のボーン（髪・スカート・リボン）も入っておりますので、Unityの有償アセット（Dynamic Bone）を利用して揺らすことができます。 この商品は Unity 2019.4.31f1 で動作確認しております。">
+    "☆☆☆☆甲子園優勝記念☆☆☆☆ 8/23まで\500引 ☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆ Humanoid対応のオリジナルモデル「ミーシャ」です。 主にVRChatでの使用を想定しています。 揺れ物用のボーン（髪・スカート・リボン）も入っておりますので、Unityの有償アセット（Dynamic Bone）を利用して揺らすことができます。 この商品は Unity 2019.4.31f1 で動作確認しております。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/674fc427-6fbb-4335-8520-23bc1069d4f5/i/1069331/dd79cc1e-3556-435d-a17d-7b437ea1b30b_base_resized.jpg">
     <meta property="og:url" content=
@@ -68,9 +68,9 @@
     <script src=
     "https://d.line-scdn.net/r/web/social-plugin/js/thirdparty/loader.min.js"
     defer="defer" nonce=
-    "xdA3QzQgH3lbAdXG88OZKWJGws4iaADSVhSFy+7U1NE="></script>
+    "4DyE26rRi72NPGIoxQo2pV8ST7thdN1s2ViK+SYiX/0="></script>
     <script src="https://asset.booth.pm/twitter.js" defer="defer"
-    nonce="xdA3QzQgH3lbAdXG88OZKWJGws4iaADSVhSFy+7U1NE="></script>
+    nonce="4DyE26rRi72NPGIoxQo2pV8ST7thdN1s2ViK+SYiX/0="></script>
     <script id="shop_with_items" type="text/x-template">
     <div class="shop-card l-card" v-if="shop"><div class="shop-card__box-wrap"><div class="shop-card__box"><div class="shop-card-box-body"><a :href="shop.base_url" @click="sendAnalyticsEvent(&quot;shop_index&quot;, &quot;click&quot;)" target="_blank"><div class="shop-card__thumbnails"><div class="shop-card__thumbnails--at-left on-white-bg"><img :alt="largeThumbItem.name" :data-original="hideThumbnail(largeThumbItem) ? &quot;https://asset.booth.pm/assets/thumbnail-alert-312-ede42745738fe1172fe21985c735ae1acab66f179bca53964b73af31cd0e07e3.png&quot; : largeThumbItem.image_url" class="lazyload u-w-100" /></div><div class="shop-card__thumbnails--at-right"><div class="shop-card__thumbnail-wrap on-white-bg" v-for="item in smallThumbItems"><div class="shop-card__thumbnail"><img :alt="item.name" :data-original="hideThumbnail(item) ? &quot;https://asset.booth.pm/assets/thumbnail-alert-312-ede42745738fe1172fe21985c735ae1acab66f179bca53964b73af31cd0e07e3.png&quot; : item.image_url" class="lazyload u-w-100" /></div></div></div></div></a></div><div class="shop-card__box-footer"><div class="shop-card__owner-info"><div class="shop-card__avatar"><a :href="shop.base_url" @click="sendAnalyticsEvent(&quot;shop_index&quot;, &quot;click&quot;)" target="_blank"><img :alt="shop.user.nickname" :data-original="shop.user.thumbnail_url" class="lazyload user_avatar-48 mobile-user_avatar-38" height="42" width="42" /></a></div><div class="shop-card__shop-name"><a :href="shop.base_url" @click="sendAnalyticsEvent(&quot;shop_index&quot;, &quot;click&quot;)" class="text-ui" target="_blank">{{ shop.name }}</a></div></div><div class="shop-card__actions"><follow-btn :ga-params="gaParams" :shop="shop"></follow-btn></div></div></div></div></div>
     </script>
@@ -83,9 +83,9 @@
     <script src=
     "https://asset.booth.pm/assets/84d6b8bb8ef11ac8043c.js" defer=
     "defer" nonce=
-    "xdA3QzQgH3lbAdXG88OZKWJGws4iaADSVhSFy+7U1NE="></script>
+    "4DyE26rRi72NPGIoxQo2pV8ST7thdN1s2ViK+SYiX/0="></script>
     <script type="application/ld+json">
-    {"@context":"https://schema.org","@type":"Product","name":"【VRアバター向け】ミーシャ【FBX】","description":"Humanoid対応のオリジナルモデル「ミーシャ」です。\n\n主にVRChatでの使用を想定しています。\n揺れ物用のボーン（髪・スカート・リボン）も入っておりますので、Unityの有償アセット（Dynamic Bone）を利用して揺らすことができます。\n\nこの商品は\nUnity 2019.4.31f1\nで動作確認しております。\n\n","url":"https://booth.pm/ja/items/1069331","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/674fc427-6fbb-4335-8520-23bc1069d4f5/i/1069331/dd79cc1e-3556-435d-a17d-7b437ea1b30b_base_resized.jpg"}
+    {"@context":"https://schema.org","@type":"Product","name":"【祝☆育英優勝】【VRアバター向け】ミーシャ【FBX】","description":"☆☆☆☆甲子園優勝記念☆☆☆☆\n\n8/23まで\\500引\n\n☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆\n\n\nHumanoid対応のオリジナルモデル「ミーシャ」です。\n\n主にVRChatでの使用を想定しています。\n揺れ物用のボーン（髪・スカート・リボン）も入っておりますので、Unityの有償アセット（Dynamic Bone）を利用して揺らすことができます。\n\nこの商品は\nUnity 2019.4.31f1\nで動作確認しております。\n\n","url":"https://booth.pm/ja/items/1069331","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2500"},"image":"https://booth.pximg.net/c/620x620/674fc427-6fbb-4335-8520-23bc1069d4f5/i/1069331/dd79cc1e-3556-435d-a17d-7b437ea1b30b_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
@@ -97,7 +97,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xdA3QzQgH3lbAdXG88OZKWJGws4iaADSVhSFy+7U1NE="></script>
+    nonce="4DyE26rRi72NPGIoxQo2pV8ST7thdN1s2ViK+SYiX/0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -109,7 +109,7 @@
         <div class="market" data-ga-tracking-id=""
         data-product-brand="anacharis" data-product-category="208"
         data-product-id="1069331" data-product-list="market_show"
-        data-product-price="3000" data-tracking="detail_item" id=
+        data-product-price="2500" data-tracking="detail_item" id=
         "items">
           <div class="market"></div>
           <nav>
@@ -165,7 +165,7 @@
                           </div>
                           <h2 class=
                           "u-tpg-title1 u-mt-0 u-text-wrap u-mb-400">
-                            【VRアバター向け】ミーシャ【FBX】
+                            【祝☆育英優勝】【VRアバター向け】ミーシャ【FBX】
                           </h2>
                           <div class=
                           "u-text-assertive u-tpg-caption1"></div>
@@ -204,7 +204,7 @@
                                     </div>
                                     <div class=
                                     "variation-price u-text-right">
-                                      ¥ 3,000
+                                      ¥ 2,500
                                     </div>
                                   </div>
                                   <div class="variation-cart">
@@ -231,7 +231,8 @@
                             <a data-url=
                             "https://booth.pm/ja/items/1069331"
                             data-lang="ja" data-hashtags="booth_pm"
-                            data-text="【VRアバター向け】ミーシャ【FBX】 | 藻類観察会"
+                            data-text=
+                            "【祝☆育英優勝】【VRアバター向け】ミーシャ【FBX】 | 藻類観察会"
                             data-count="none" class=
                             "twitter-share-button" href=
                             "https://twitter.com/share">ツイート</a>
@@ -257,8 +258,8 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【VRアバター向け】ミーシャ【FBX】" class=
-                            "market-item-detail-item-image"
+                            <img alt="【祝☆育英優勝】【VRアバター向け】ミーシャ【FBX】"
+                            class="market-item-detail-item-image"
                             data-origin=
                             "https://booth.pximg.net/674fc427-6fbb-4335-8520-23bc1069d4f5/i/1069331/dd79cc1e-3556-435d-a17d-7b437ea1b30b.png"
                             src=
@@ -268,8 +269,8 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【VRアバター向け】ミーシャ【FBX】" class=
-                            "market-item-detail-item-image"
+                            <img alt="【祝☆育英優勝】【VRアバター向け】ミーシャ【FBX】"
+                            class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/674fc427-6fbb-4335-8520-23bc1069d4f5/i/1069331/33d976c7-a693-4197-a103-2a2cf1d903e2_base_resized.jpg"
                             data-origin=
@@ -279,8 +280,8 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【VRアバター向け】ミーシャ【FBX】" class=
-                            "market-item-detail-item-image"
+                            <img alt="【祝☆育英優勝】【VRアバター向け】ミーシャ【FBX】"
+                            class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/674fc427-6fbb-4335-8520-23bc1069d4f5/i/1069331/97686c17-1e47-4cb6-828a-c21041292d59_base_resized.jpg"
                             data-origin=
@@ -290,8 +291,8 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【VRアバター向け】ミーシャ【FBX】" class=
-                            "market-item-detail-item-image"
+                            <img alt="【祝☆育英優勝】【VRアバター向け】ミーシャ【FBX】"
+                            class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/674fc427-6fbb-4335-8520-23bc1069d4f5/i/1069331/3c0f6e8f-11a6-44ee-9721-39f21fe1ddf6_base_resized.jpg"
                             data-origin=
@@ -301,8 +302,8 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="【VRアバター向け】ミーシャ【FBX】" class=
-                            "market-item-detail-item-image"
+                            <img alt="【祝☆育英優勝】【VRアバター向け】ミーシャ【FBX】"
+                            class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/674fc427-6fbb-4335-8520-23bc1069d4f5/i/1069331/ecc3f446-9d1c-436c-9eaa-7e47f8b1e861_base_resized.jpg"
                             data-origin=
@@ -338,6 +339,8 @@
                         <div class=
                         "js-market-item-detail-description description">
                           <p class="autolink u-text-wrap">
+                            ☆☆☆☆甲子園優勝記念☆☆☆☆ 8/23まで\500引
+                            ☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆
                             Humanoid対応のオリジナルモデル「ミーシャ」です。
                             主にVRChatでの使用を想定しています。
                             揺れ物用のボーン（髪・スカート・リボン）も入っておりますので、Unityの有償アセット（Dynamic
