updated at: 2022-08-23 19:19, [3Dモデル]セーラー服眼鏡っ娘[アバター3.0・PhysBone対応] - GHOST EMPIRE - BOOTH

--- a/VRChat/73/1227673.html
+++ b/VRChat/73/1227673.html
@@ -4,26 +4,26 @@
     <link href="/manifest.json" rel="manifest">
     <meta charset="utf-8">
     <title>
-      [アバター3.0対応3Dモデル]セーラー服眼鏡っ娘[VRchat・VRM] - GHOST EMPIRE - BOOTH
+      [3Dモデル]セーラー服眼鏡っ娘[アバター3.0・PhysBone対応] - GHOST EMPIRE - BOOTH
     </title>
     <meta name="description" content=
-    "セーラー服眼鏡っ娘のモデルデータです。 VRchatのアバター向けとして制作してあります。 アバター3.0対応。 ・まばたき対応 ・表情モーフがメニューに登録済み ・リップシンク対応 ・Dynamicbone対応(胸、髪、リボン) ・表情変化対応 ・設定済みVRM形式ファイルも付属">
+    "セーラー服眼鏡っ娘のモデルデータです。 VRchatのアバター向けとして制作してあります。 アバター3.0対応。 ・まばたき対応 ・表情モーフがメニューに登録済み ・リップシンク対応 ・PhysBone対応(胸、髪、リボン) ・表情変化対応 ・設定済みVRM形式ファイルも付属">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1227673">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "[アバター3.0対応3Dモデル]セーラー服眼鏡っ娘[VRchat・VRM] - GHOST EMPIRE - BOOTH">
+    "[3Dモデル]セーラー服眼鏡っ娘[アバター3.0・PhysBone対応] - GHOST EMPIRE - BOOTH">
     <meta name="twitter:description" content=
-    "セーラー服眼鏡っ娘のモデルデータです。 VRchatのアバター向けとして制作してあります。 アバター3.0対応。 ・まばたき対応 ・表情モーフがメニューに登録済み ・リップシンク対応 ・Dynamicbone対応(胸、髪、リボン) ・表情変化対応 ・設定済みVRM形式ファイルも付属">
+    "セーラー服眼鏡っ娘のモデルデータです。 VRchatのアバター向けとして制作してあります。 アバター3.0対応。 ・まばたき対応 ・表情モーフがメニューに登録済み ・リップシンク対応 ・PhysBone対応(胸、髪、リボン) ・表情変化対応 ・設定済みVRM形式ファイルも付属">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/947f533c-bcb4-495a-bb89-6ca324208706/i/1227673/ff3b9243-b045-4e21-8472-797d24d3c3cc_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "[アバター3.0対応3Dモデル]セーラー服眼鏡っ娘[VRchat・VRM] - GHOST EMPIRE - BOOTH">
+    "[3Dモデル]セーラー服眼鏡っ娘[アバター3.0・PhysBone対応] - GHOST EMPIRE - BOOTH">
     <meta property="og:description" content=
-    "セーラー服眼鏡っ娘のモデルデータです。 VRchatのアバター向けとして制作してあります。 アバター3.0対応。 ・まばたき対応 ・表情モーフがメニューに登録済み ・リップシンク対応 ・Dynamicbone対応(胸、髪、リボン) ・表情変化対応 ・設定済みVRM形式ファイルも付属">
+    "セーラー服眼鏡っ娘のモデルデータです。 VRchatのアバター向けとして制作してあります。 アバター3.0対応。 ・まばたき対応 ・表情モーフがメニューに登録済み ・リップシンク対応 ・PhysBone対応(胸、髪、リボン) ・表情変化対応 ・設定済みVRM形式ファイルも付属">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/947f533c-bcb4-495a-bb89-6ca324208706/i/1227673/ff3b9243-b045-4e21-8472-797d24d3c3cc_base_resized.jpg">
     <meta property="og:url" content=
@@ -68,9 +68,9 @@
     <script src=
     "https://d.line-scdn.net/r/web/social-plugin/js/thirdparty/loader.min.js"
     defer="defer" nonce=
-    "H8EN5N5flZh/sQ5braZsYE9RBMV+FY9iX1SGYgCUiAI="></script>
+    "4IipHZuW2t94EJoBAPRBKv78MEZ8iCo5mkAhHXl6eLM="></script>
     <script src="https://asset.booth.pm/twitter.js" defer="defer"
-    nonce="H8EN5N5flZh/sQ5braZsYE9RBMV+FY9iX1SGYgCUiAI="></script>
+    nonce="4IipHZuW2t94EJoBAPRBKv78MEZ8iCo5mkAhHXl6eLM="></script>
     <script id="shop_with_items" type="text/x-template">
     <div class="shop-card l-card" v-if="shop"><div class="shop-card__box-wrap"><div class="shop-card__box"><div class="shop-card-box-body"><a :href="shop.base_url" @click="sendAnalyticsEvent(&quot;shop_index&quot;, &quot;click&quot;)" target="_blank"><div class="shop-card__thumbnails"><div class="shop-card__thumbnails--at-left on-white-bg"><img :alt="largeThumbItem.name" :data-original="hideThumbnail(largeThumbItem) ? &quot;https://asset.booth.pm/assets/thumbnail-alert-312-ede42745738fe1172fe21985c735ae1acab66f179bca53964b73af31cd0e07e3.png&quot; : largeThumbItem.image_url" class="lazyload u-w-100" /></div><div class="shop-card__thumbnails--at-right"><div class="shop-card__thumbnail-wrap on-white-bg" v-for="item in smallThumbItems"><div class="shop-card__thumbnail"><img :alt="item.name" :data-original="hideThumbnail(item) ? &quot;https://asset.booth.pm/assets/thumbnail-alert-312-ede42745738fe1172fe21985c735ae1acab66f179bca53964b73af31cd0e07e3.png&quot; : item.image_url" class="lazyload u-w-100" /></div></div></div></div></a></div><div class="shop-card__box-footer"><div class="shop-card__owner-info"><div class="shop-card__avatar"><a :href="shop.base_url" @click="sendAnalyticsEvent(&quot;shop_index&quot;, &quot;click&quot;)" target="_blank"><img :alt="shop.user.nickname" :data-original="shop.user.thumbnail_url" class="lazyload user_avatar-48 mobile-user_avatar-38" height="42" width="42" /></a></div><div class="shop-card__shop-name"><a :href="shop.base_url" @click="sendAnalyticsEvent(&quot;shop_index&quot;, &quot;click&quot;)" class="text-ui" target="_blank">{{ shop.name }}</a></div></div><div class="shop-card__actions"><follow-btn :ga-params="gaParams" :shop="shop"></follow-btn></div></div></div></div></div>
     </script>
@@ -81,11 +81,11 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/84d6b8bb8ef11ac8043c.js" defer=
+    "https://asset.booth.pm/assets/9c6ff34084ea6c95df33.js" defer=
     "defer" nonce=
-    "H8EN5N5flZh/sQ5braZsYE9RBMV+FY9iX1SGYgCUiAI="></script>
+    "4IipHZuW2t94EJoBAPRBKv78MEZ8iCo5mkAhHXl6eLM="></script>
     <script type="application/ld+json">
-    {"@context":"https://schema.org","@type":"Product","name":"[アバター3.0対応3Dモデル]セーラー服眼鏡っ娘[VRchat・VRM]","description":"セーラー服眼鏡っ娘のモデルデータです。\nVRchatのアバター向けとして制作してあります。\n\nアバター3.0対応。\n・まばたき対応\n・表情モーフがメニューに登録済み\n\n・リップシンク対応\n・Dynamicbone対応(胸、髪、リボン)\n・表情変化対応\n・設定済みVRM形式ファイルも付属","url":"https://booth.pm/ja/items/1227673","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/947f533c-bcb4-495a-bb89-6ca324208706/i/1227673/ff3b9243-b045-4e21-8472-797d24d3c3cc_base_resized.jpg"}
+    {"@context":"https://schema.org","@type":"Product","name":"[3Dモデル]セーラー服眼鏡っ娘[アバター3.0・PhysBone対応]","description":"セーラー服眼鏡っ娘のモデルデータです。\nVRchatのアバター向けとして制作してあります。\n\nアバター3.0対応。\n・まばたき対応\n・表情モーフがメニューに登録済み\n\n・リップシンク対応\n・PhysBone対応(胸、髪、リボン)\n・表情変化対応\n・設定済みVRM形式ファイルも付属\n\n","url":"https://booth.pm/ja/items/1227673","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/947f533c-bcb4-495a-bb89-6ca324208706/i/1227673/ff3b9243-b045-4e21-8472-797d24d3c3cc_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
@@ -97,7 +97,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="H8EN5N5flZh/sQ5braZsYE9RBMV+FY9iX1SGYgCUiAI="></script>
+    nonce="4IipHZuW2t94EJoBAPRBKv78MEZ8iCo5mkAhHXl6eLM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -108,7 +108,7 @@
         "6LfF1dcZAAAAAOHQX8v16MX5SktDwmQINVD_6mBF"></div>
         <div class="market" data-ga-tracking-id=""
         data-product-brand="minabetetumi" data-product-category=
-        "127" data-product-id="1227673" data-product-list=
+        "208" data-product-id="1227673" data-product-list=
         "market_show" data-product-price="3000" data-tracking=
         "detail_item" id="items">
           <div class="market"></div>
@@ -128,8 +128,8 @@
                   data-product-list=
                   "from market_show via breadcrumbs to category_index"
                   href=
-                  "/ja/browse/3D%E3%83%A2%E3%83%87%E3%83%AB%EF%BC%88%E3%81%9D%E3%81%AE%E4%BB%96%EF%BC%89">
-                  3Dモデル（その他）</a>
+                  "/ja/browse/3D%E3%82%AD%E3%83%A3%E3%83%A9%E3%82%AF%E3%82%BF%E3%83%BC">
+                  3Dキャラクター</a>
                 </div>
               </div>
             </div>
@@ -178,7 +178,7 @@
                           </div>
                           <h2 class=
                           "u-tpg-title1 u-mt-0 u-text-wrap u-mb-400">
-                            [アバター3.0対応3Dモデル]セーラー服眼鏡っ娘[VRchat・VRM]
+                            [3Dモデル]セーラー服眼鏡っ娘[アバター3.0・PhysBone対応]
                           </h2>
                           <div class=
                           "u-text-assertive u-tpg-caption1"></div>
@@ -245,7 +245,7 @@
                             "https://booth.pm/ja/items/1227673"
                             data-lang="ja" data-hashtags="booth_pm"
                             data-text=
-                            "[アバター3.0対応3Dモデル]セーラー服眼鏡っ娘[VRchat・VRM] | GHOST EMPIRE"
+                            "[3Dモデル]セーラー服眼鏡っ娘[アバター3.0・PhysBone対応] | GHOST EMPIRE"
                             data-count="none" class=
                             "twitter-share-button" href=
                             "https://twitter.com/share">ツイート</a>
@@ -272,7 +272,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "[アバター3.0対応3Dモデル]セーラー服眼鏡っ娘[VRchat・VRM]"
+                            "[3Dモデル]セーラー服眼鏡っ娘[アバター3.0・PhysBone対応]"
                             class="market-item-detail-item-image"
                             data-origin=
                             "https://booth.pximg.net/947f533c-bcb4-495a-bb89-6ca324208706/i/1227673/ff3b9243-b045-4e21-8472-797d24d3c3cc.png"
@@ -284,7 +284,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "[アバター3.0対応3Dモデル]セーラー服眼鏡っ娘[VRchat・VRM]"
+                            "[3Dモデル]セーラー服眼鏡っ娘[アバター3.0・PhysBone対応]"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/947f533c-bcb4-495a-bb89-6ca324208706/i/1227673/d003003a-5520-455c-86d8-7a099debeaab_base_resized.jpg"
@@ -296,7 +296,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "[アバター3.0対応3Dモデル]セーラー服眼鏡っ娘[VRchat・VRM]"
+                            "[3Dモデル]セーラー服眼鏡っ娘[アバター3.0・PhysBone対応]"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/947f533c-bcb4-495a-bb89-6ca324208706/i/1227673/7882d186-76f6-43dc-ab79-fe07ceb99059_base_resized.jpg"
@@ -308,7 +308,7 @@
                           <div class=
                           "market-item-detail-item-image-wrapper">
                             <img alt=
-                            "[アバター3.0対応3Dモデル]セーラー服眼鏡っ娘[VRchat・VRM]"
+                            "[3Dモデル]セーラー服眼鏡っ娘[アバター3.0・PhysBone対応]"
                             class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/947f533c-bcb4-495a-bb89-6ca324208706/i/1227673/f25b7e44-3551-44ad-a153-0125176ace30_base_resized.jpg"
@@ -344,7 +344,7 @@
                             セーラー服眼鏡っ娘のモデルデータです。
                             VRchatのアバター向けとして制作してあります。 アバター3.0対応。
                             ・まばたき対応 ・表情モーフがメニューに登録済み ・リップシンク対応
-                            ・Dynamicbone対応(胸、髪、リボン) ・表情変化対応
+                            ・PhysBone対応(胸、髪、リボン) ・表情変化対応
                             ・設定済みVRM形式ファイルも付属
                           </p>
                         </div>
@@ -486,8 +486,8 @@
                           data-tracking="click" data-product-list=
                           "from market_show via tag_category_search to search_index"
                           href=
-                          "https://booth.pm/ja/browse/3D%E3%83%A2%E3%83%87%E3%83%AB%EF%BC%88%E3%81%9D%E3%81%AE%E4%BB%96%EF%BC%89?tags%5B%5D=%E5%A5%B3%E5%AD%90%E9%AB%98%E7%94%9F">
-                          女子高生 x 3Dモデル（その他） で検索</a>
+                          "https://booth.pm/ja/browse/3D%E3%82%AD%E3%83%A3%E3%83%A9%E3%82%AF%E3%82%BF%E3%83%BC?tags%5B%5D=%E5%A5%B3%E5%AD%90%E9%AB%98%E7%94%9F">
+                          女子高生 x 3Dキャラクター で検索</a>
                         </div>
                       </div>
                     </div>
@@ -503,7 +503,7 @@
             </div>
           </aside>
           <script id="json_modules" type="application/json">
-          {"modules":[{"type":"text","title":"□導入までの流れ□","content":"□導入までの流れ□\nUnityでVRchatにアバターをアップロードする詳細な説明はwebに多数ありますので、そちらをご確認ください。\n\n・Unity (バージョンはVRchat公式の指定するものをご利用ください)で新規プロジェクトを作成します。\n\n・VRCSDKのunitypackageをVRchat公式サイトよりダウンロードしてインポートします。(Asetts → Import Package → Custom Packageからインポートするファイルを選びます)\nSDKのバージョンは必ずSDK3を使用してください。\n\n\n※オプション\n・Dynamicbone(有償アセット)\nhttps://assetstore.unity.com/packages/tools/animation/dynamic-bone-16743\n\n上記をご用意の上、予めインポートすることをオススメします。\n\n無くてもアバターとして利用は出来ますが、\nDynamicboneがないと胸や髪の揺れものは動きません。\n\n・同様に本パッケージであるsailormegane3.0.unitypackageをインポート後、File → Open SceneからAssets内のSailorMegane.unityを開きます。\nその後VRChat SDKメニューのShow Build Contril Panelからビルドし、Privateに設定してアップロードすれば利用できると思います。\n\n・Unity標準のシェーダーを使う場合は\nUnlit/Textureの使用をオススメします。\n\n(上記の説明は2021年10月現在のものです。VRchatの仕様変更等で変わる可能性があります。)"},{"type":"text","title":"□表情モーフについて□","content":"予め表情変化がメニューに組み込み済みです。\n\n・emo_angry\n怒った顔\n\n・emo_jitome\nジト目\n\n・emo_sad\n悲しそうな顔\n\n・emo_smile\n両目を閉じた笑顔\n\n・emo_warui\n悪そうな顔\n\n・emo_wink\nウインク\n\nまた各種シェイプキーもありますので、お好みで組み合わせてAnimationファイルを作成してください。"},{"type":"text","title":"□内容物□","content":"・sailormegane3.0.unitypackage(アバター3.0対応)\nモデル、テクスチャ、dynamicbone等の各種設定がされたパッケージです。通常はこちらを読み込んで利用します。\n\n\n以下は個別のデータです。ご自身で設定して利用される場合にお使いください。\n\n・sailormegane.fbx\n本モデルデータ本体\n\n・sailormegane01.png\n・sailormegane02.png\n・sailormegane03.png\nテクスチャです。末尾にrの付いているものは黒色セーラー服の差分ですのでお好みで選択して使用してください。\n\n・sailormegane_mask01.png\n・sailormegane_mask02.png\nマスク用画像です。シェーダーでアウトラインやリムを不要な部分に表示させない為に使います。\n\n・sailormegane.vrm\nVRM形式の設定済みデータです。VRM規格対応ソフトで利用できます。"},{"type":"text","title":"□利用規約□","content":"・本モデルの利用に当たり利用規約への同意が必要です。本モデルを利用した時点で利用規約に同意したものとします。必ず事前にご確認ください。\n\n利用規約の内容は下記ページにあります。\nhttp://ghostempire.sakura.ne.jp/3dmodel/sailormegane.html"}]}
+          {"modules":[{"type":"text","title":"□導入までの流れ□","content":"□導入までの流れ□\nUnityでVRchatにアバターをアップロードする詳細な説明はwebに多数ありますので、そちらをご確認ください。\n\n・Unity (バージョンはVRchat公式の指定するものをご利用ください)で新規プロジェクトを作成します。\n\n・VRCSDKのunitypackageをVRchat公式サイトよりダウンロードしてインポートします。(Asetts → Import Package → Custom Packageからインポートするファイルを選びます)\nSDKのバージョンは必ずSDK3を使用してください。\n\n・同様に本パッケージであるsailormegane3.0.unitypackageをインポート後、File → Open SceneからAssets内のSailorMegane.unityを開きます。\nその後VRChat SDKメニューのShow Build Contril Panelからビルドし、Privateに設定してアップロードすれば利用できると思います。\n\n・マテリアルにはlilToonシェーダーが設定済みです。\n事前にダウンロードして同様にインポートしておくことで自動的に適用されます。\nダウンロードはこちら→https://booth.pm/ja/items/3087170\n\nUnity標準のシェーダーを使う場合はUnlit/Textureの使用をオススメします。\n\n(上記の説明は2022年8月現在のものです。VRchatの仕様変更等で変わる可能性があります。)"},{"type":"text","title":"□表情モーフについて□","content":"予め表情変化がメニューに組み込み済みです。\n\n・emo_angry\n怒った顔\n\n・emo_jitome\nジト目\n\n・emo_sad\n悲しそうな顔\n\n・emo_smile\n両目を閉じた笑顔\n\n・emo_warui\n悪そうな顔\n\n・emo_wink\nウインク\n\nまた各種シェイプキーもありますので、お好みで組み合わせてAnimationファイルを作成してください。"},{"type":"text","title":"□内容物□","content":"・sailormegane3.0.unitypackage(アバター本体)\nモデル、テクスチャ、シェーダー等の各種設定がされたパッケージです。通常はこちらを読み込んで利用します。\n\n\n以下は個別のデータです。ご自身で設定して利用される場合にお使いください。\n\n・sailormegane.fbx\n本モデルデータ本体\n\n・sailormegane01.png\n・sailormegane02.png\n・sailormegane03.png\nテクスチャです。末尾にrの付いているものは黒色セーラー服の差分ですのでお好みで選択して使用してください。\n\n・sailormegane_mask01.png\n・sailormegane_mask02.png\nマスク用画像です。シェーダーでアウトラインやリムを不要な部分に表示させない為に使います。\n\n・sailormegane.vrm\nVRM形式の設定済みデータです。VRM規格対応ソフトで利用できます。"},{"type":"text","title":"□利用規約□","content":"・本モデルの利用に当たり利用規約への同意が必要です。本モデルを利用した時点で利用規約に同意したものとします。必ず事前にご確認ください。\n\n利用規約の内容は下記ページにあります。\nhttp://ghostempire.sakura.ne.jp/3dmodel/sailormegane.html"},{"type":"text","title":"□更新情報□","content":"2021/10\nアバター3.0に対応\n\n2022/8\nPhysBoneの実装に伴い揺れものをDynamicBoneからPhysBoneに変更\nArktoon shederの配布終了に伴いシェーダーをlilToonに変更"}]}
           </script>
         </div>
       </main>
