--- a/VRChat/19/1221319.html
+++ b/VRChat/19/1221319.html
@@ -71,27 +71,49 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
+  </head>
+  <body>
+    <div class="mini-player-controller" style="display: none;">
+      <a class="scroller" data-smooth-scroll="true"><img class=
+      "mini-player-controller__image" src=
+      "https://asset.booth.pm/assets/thumbnail_placeholder_c_300-09027647543d43ee525b2a7fe28d5ed5a3b6069d0c596c89b21776543ed1c0fe.png"></a><a class="scroller mini-player-information"
+      data-smooth-scroll="true">
+      <div class="mini-player-information__item-name"></div>
+      <div class="mini-player-information__shop-name"></div>
+      <div class="mini-player-information__navigation">
+        試聴中の商品へスクロール
+      </div></a>
+      <div class="mini-player-controls">
+        <div class="mini-player-mode-ui">
+          <div class="mini-player-mode-ui__knob"></div>
+          <div class="mini-player-mode-ui__short">
+            15秒
+          </div>
+          <div class="mini-player-mode-ui__full">
+            フル
+          </div>
+        </div>
+        <div class="mini-player-play-ui"></div>
+      </div>
+    </div>
     <meta content="initial-scale=1.0" id="viewport" name=
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
     "https://asset.booth.pm/assets/3300b3d609d626203a57.js" defer=
     "defer" nonce=
-    "OuI90XwFkIZFp180SZHGvSDtTsH5sLigjGzlDCmogU4="></script>
+    "rXZgYFJb5yqDr9kaWA+p340NVGP5AN1ZgLTrh0xTZ/8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRC想定】メカアーム","description":"◆説明◆\nVRChatでの使用を想定した3Dモデルです。\n\n・ポリゴン数：5024\n\n◆内容物◆\n\n・FBXファイル\n\n・Unity Package(Rigidbody、Fix Joint設定済み)\n\n・テクスチャ3枚\n\n・reedme 2つ\n\n\nサブアーム装着方法は、「動く城のフィオ」様のこちらのツイート等をご参考にしてください。\nhttps://twitter.com/phio_alchemist/status/1037547067164348416","url":"https://booth.pm/ja/items/1221319","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/70aafdbf-6446-4d58-b2e0-60b2ec466f11/i/1221319/9f110989-f76c-44fd-889f-c1cf50e335cd_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
-    "apple-touch-icon-precomposed">
-  </head>
-  <body>
-    <noscript><iframe height="0" src=
-    "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
+    "apple-touch-icon-precomposed"><noscript><iframe height="0"
+    src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OuI90XwFkIZFp180SZHGvSDtTsH5sLigjGzlDCmogU4="></script>
+    nonce="rXZgYFJb5yqDr9kaWA+p340NVGP5AN1ZgLTrh0xTZ/8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
